--- a/p2_i/styles/main.css
+++ b/p2_i/styles/main.css
@@ -1,44 +1,65 @@
 #title{
-	font-size: 26px;
-	line-height: 75px;
+	font-size: 2rem;
+	line-height: 5rem;
 }
-
+body{
+	background: linear-gradient(to right, #5f5f5f, #727272);
+	
+}
 .menu-object{
-	display:block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 300px;
-	height: 75px;
-	font-size: 16px;
-	margin-top: 10px;
+	width: 16rem;
+	height: 4rem;
+	font-size: 1.5rem;
+	margin-top: 1rem;
+	grid-template-rows: 6rem 6rem 6rem;
 }
 
 p{
 	text-align: center;
+	color: beige;
 }
 
 button.menu-object:active{
-	font-size: 18px;
-	width: 275px;
-	height: 70px;
+	font-size: 1.5rem;
+	width: 16rem;
+	height: 5rem;
 }
 
 button.menu-object:hover:not(:active){
-	font-size: 22px;
-	width: 325px;
-	height: 85px;
+	font-size: 2rem;
+	width: 18rem;
+	height: 5rem;
+}
+
+.container{
+	display: grid;
+	justify-content: center;
+	grid-template-columns: 8rem 8rem 8rem 8rem;
+	padding-bottom: 2rem;
+}
+
+.botons{
+	display: grid;
+	justify-content: center;
+	grid-template-rows: 6rem 6rem 6rem;
+}
+
+.Control{
+	display: grid;
+	justify-content: center;
+	grid-template-rows: 6rem;
+}
+
+hr.linia{
+    border-top: 0.1rem solid #13ccff;
+    width: 30%;
 }
 
 .Sortir{
-	font-size: 20px;
-	width: 10fr;
-	height: 5fr;
-}
-
-img{
-
-	display: grid;
-	grid-template-rows: 10fr 10fr 10fr;
+	display: flex;
+	justify-content: center;
+    align-items: center;
 
 }
-
