--- a/p2_i/styles/main.css
+++ b/p2_i/styles/main.css
@@ -3,7 +3,7 @@
 	line-height: 5rem;
 }
 body{
-	background: linear-gradient(to right, #5f5f5f, #727272);
+	background: linear-gradient(to right, #575757, #858585);
 }
 .menu-object{
 	margin-left: auto;
