--- a/treball_i/styles/style.css
+++ b/treball_i/styles/style.css
@@ -6,6 +6,18 @@ input[type=number]{
     text-align: center;
 }
 
+hr.linia{
+    border-top: 0.2rem solid #ff7613;
+    width: 25%;
+}
+
+body{
+	background: linear-gradient(to right, #575757, #858585);
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+	font-weight: 400;
+  	line-height: 1.5;
+}
+
 #title{
 	font-size: 26px;
 	line-height: 75px;
@@ -17,12 +29,13 @@ input[type=number]{
 	margin-right: auto;
 	width: 300px;
 	height: 75px;
-	font-size: 16px;
+	font-size: 20px;
 	margin-top: 10px;
 }
 
 p{
 	text-align: center;
+	color: burlywood;
 }
 
 button.menu-object:active{
